--- a/praca_dyplomowa/streszczenia.tex
+++ b/praca_dyplomowa/streszczenia.tex
@@ -5,10 +5,10 @@ Rozpoznawanie gestów na przykładzie gry papier, kamień, nożyce
 \end{center}
 
 \section*{Streszczenie}
-W pracy zostało przedstawione podejście do problemu rozpoznawania gestów przez wszystkie jego etapy. Na początku zostało pokazane zabranie i przetwarzanie danych w celu uzyskania jak najlepszego zbioru uczącego jak i testowego. Potem zostały opisane etapy filtracji, segmentacji dłoni. Po uzyskaniu danych treningowych zostały stworzone klasyfikatory. Pierwszym podejściem było stworzenie klasyfikatora KNN, a następnie stworzenie klasyfikatora bazującego na sieciach neuronowych. Końcowym etapy pracy to porównanie wyników uzyskanych przez wymienione klasyfikatory na przykładzie gry papier, kamień, nożyce.
+W pracy inżynierskiej zostało przedstawione podejście do problemu rozpoznawania gestów przez wszystkie jego etapy. Na początku zostało pokazane zabranie i przetwarzanie danych w celu uzyskania jak najlepszego zbioru uczącego jak i testowego. Potem zostały opisane etapy filtracji, segmentacji dłoni. Po uzyskaniu zbioru danych zostały stworzone klasyfikatory. Pierwszym podejściem było stworzenie klasyfikatora KNN, a następnie stworzenie klasyfikatora bazującego na sieciach neuronowych. Końcowym etapy pracy to porównanie wyników uzyskanych przez wymienione klasyfikatory na przykładzie gry papier, kamień, nożyce.
 
 \bigskip
-{\noindent\bf Słowa kluczowe:} rozpoznawanie gestów, klasyfikacja, TensorFlow, sieci neuronowe
+{\noindent\bf Słowa kluczowe:} rozpoznawanie gestów, klasyfikacja, KNN, OpenCV, TensorFlow, sieci neuronowe
 
 \vskip 2cm
 
